--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-Hello World
-Test 123
-Test 123
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
