--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<link rel=”stylesheet” media=”screen and (min-width:500px)” href=”main.css”>
 <html>
 <body>
 <h1>Hello World</h1>
