--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <link rel=”stylesheet” media=”screen and (min-width:500px)” href=”main.css”>
 <html>
 <body>
+body {
+   background-color:blue;
+}
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
