Update to make it more personal.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel=”stylesheet” media=”screen and (min-width:500px)” href=”main.css”>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Alan Townsend's Personal Website.</h1>
+<p>Welcome to my personal website! It's in quite a rough state at the moment but it wil be expanded and evolved!</p>
 </body>
 </html>
