--- a/index.html
+++ b/index.html
@@ -1,9 +1,78 @@
-<!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<link rel=”stylesheet” media=”screen and (min-width:500px)” href=”main.css”>
 <html>
-<body>
-<h1>Alan Townsend's Personal Website.</h1>
-<p>Welcome to my personal website! It's in quite a rough state at the moment but it wil be expanded and evolved!</p>
-</body>
+<body background= stardust.png>
+<head>
+<meta name="description" content="Personal Website for Alan Townsend">
+<meta name="keywords" content="Alan Townsend,Alan,Townsend">
+<title>
+Alan Townsend's Personal Website
+</title>
+</head>
+<body><center>
+<img src="cartoonearth.gif" width=200 size=200>
+<font color= FCFCFC>
+<hr width=1000 size=10>
+<h1>Alan Townsend's Website</h1>
+<p>Welcome to my personal website! It isn't anything special at the moment but I plan on expanding and evolving it through my college 
+career. For now it is mostly about me, my hobbies and interests however I do plan on adding a resume and other items as my experience grows.</p>
+<hr width=1000 size=10>
+<h2>A Bit About Myself</h2>
+<p>At the time of making this website I am 18 years old and a <B>computer science <I>intended major</I></B>. 
+I'll be completely honest here, I am a <B>huge</B> geek when it comes to a number of things. A few examples include history, space and technology.
+There are actually pretty specific reasons why I'm so interested in this kinda stuff. There are two reasons why I love to learn about history.
+First I am a firm believer that history has patterns and that watching these patterns can serve as hints at what's to come.
+The second reason is simply that human history is the best story ever writen. I adore reading about anything from the <B><font color= DD1F1F>Roman Legions</font></B> to the world's dangerous <B><font color= A77044>first steps</B></font> in to the modern world
+because you can't make some of these stories up. Now moving on to space. Put very simply I see space as the only possible solution to human growth and survival.
+Our <B><font color= 6DD5F5>fragile blue marble</font></B> won't be around forever and we need to move on if our species is to survive.
+It also helps that I'm a huge <B><font color= FDF000>science fiction</font></B> nerd and would love to see some of the ideas in reality. Finaly lets look at tech.
+The ideas of that are starting to creep their ways into the hands of the public absolutely blow my mind. <B><font color= 28E22D>VR, Self-Driving Cars, and AI</B></font> for example interest me to no end.
+Honestly part of the reason why I want to be a CS major is to be part of this kind of technology and it's development.</p>
+<hr width=1000 size=10>
+<h2>Goals</h2>
+<p>Here I just wanted to put a table with a few of my goals that I am striding twoards now or will be trying to achieve later this year.</p>
+<table style ="width: 1000" bgcolor=FCFCFC>
+	<tr>
+		<th><h3>Goal</h3></th>
+		<th><h3>When</h3></th>
+		<th><h3>Why</h3></th>
+	</tr>
+	<tr>
+		<th>Find a new internship/job.</th>
+		<th>Spring/Summer 2017.</th>
+		<th>My current internship is coming to an end very soon.</th>
+	</tr>
+	<tr>
+		<th>Do much better in Chemistry.</th>
+		<th>Remaining fall semester.</th>
+		<th>My current grade isn't doing my GPA any favors.</th>
+	</tr>
+	<tr>
+		<th>Update this website further.</th>
+		<th>2016-2020</th>
+		<th>I plan on using this as a skeleton for a future resume type website.</th>
+	</tr>
+	<tr>
+		<th>Begin a decent career.</th>
+		<th>Future</th>
+		<th>Now this is far off but can't hurt to think about it.</th>
+	</tr>
+<table>
+<hr width=1000 size=10>
+<h2>Links and Email</h2>
+<p>Now to wrap up this page I am going to include a few links that I really like and a way to email me.</p>
+<p>Here it is, a link to my<A HREF="MAILTO:alantown@buffalo.edu">
+email.
+</A>
+Go ahead and click that link if you wound like to contact me.
+</p>
+<p>I just love to explore this site. Some absolutely stunning photos.<A HREF= https://www.nasa.gov/>
+NASA's site.
+</p></A>
+<p>My favorite place to read and chat about history.<A HREF= https://www.reddit.com/r/history/>
+Reddit's r/history</p></A>
+<p>Last but not least here's a link to another site that I've used to kill way to much time.<A HREF=http://www.popularmechanics.com/technology/>
+Popular Mechanics.
+</p></A>
+
+</font>
+</body></center>
 </html>
